--- a/KeyStoreLearning/app/src/main/res/layout/activity_main.xml
+++ b/KeyStoreLearning/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/keyRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.035"
+        android:minHeight="40dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/keyRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        tools:layout_editor_absoluteX="79dp"
+        tools:layout_editor_absoluteY="142dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/generateKeyButton"/>
+
+    <Button
+        android:id="@+id/generateKeyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@id/keyRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
