add keystore logic to main app, done basic fragment

--- a/App/app/src/main/res/layout/activity_home.xml
+++ b/App/app/src/main/res/layout/activity_home.xml
@@ -1,47 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    android:orientation="vertical"
+    tools:context=".NewHomeActivity">
 
-    <Spinner
-        android:id="@+id/spinner"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:contentDescription="this is tab layout..."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:tabMode="fixed"
+        app:tabGravity="fill" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="671dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
-
-    <Button
-        android:id="@+id/buttonPDF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create PDF"
-        app:layout_constraintHorizontal_bias="0.216"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/buttonSign"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <Button
-        android:id="@+id/buttonSign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign"
-        app:layout_constraintLeft_toRightOf="@id/buttonPDF"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view"
-        tools:ignore="TouchTargetSizeCheck" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+</LinearLayout>
