--- a/App/app/src/main/res/layout/fragment_key_manager.xml
+++ b/App/app/src/main/res/layout/fragment_key_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewHomeActivity">
+    tools:context=".ui.activities.HomeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/key_recycler_view"
