not done sign logic, ui bug

--- a/App/app/src/main/res/layout/key_row.xml
+++ b/App/app/src/main/res/layout/key_row.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        app:cardCornerRadius="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/key_row_layout"
@@ -25,15 +25,17 @@
             <!-- Key Alias -->
             <TextView
                 android:id="@+id/keyAlias"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Key Alias"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/expandedLayout"
                 app:layout_constraintEnd_toStartOf="@id/isRegistered"
+                app:layout_constraintHorizontal_bias="0.00"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/expandedLayout" />
+                android:paddingEnd="125dp"/>
 
             <!-- Is Registered -->
             <TextView
@@ -44,35 +46,34 @@
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/expandedLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/keyAlias"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.086" />
+                app:layout_constraintHorizontal_bias="1.0"/>
 
             <!-- Expanded Layout -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/expandedLayout"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/keyAlias"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="5dp">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/keyAlias">
 
                 <!-- Key ID -->
                 <TextView
                     android:id="@+id/keyId"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:paddingEnd="8dp"
                     android:text="UUID: 12345"
                     android:textSize="16sp"
+                    app:layout_constraintBottom_toTopOf="@id/keyParaType"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/keyParaType"
-                    android:paddingEnd="8dp"
-                    android:layout_marginEnd="10dp"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!-- Key Parameter Type -->
                 <TextView
@@ -100,23 +101,23 @@
                     android:id="@+id/btnRegisterKey"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
                     android:text="Register"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/btnExtract"
-                    app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="15dp" />
+                    app:layout_constraintStart_toStartOf="@+id/guideline"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!-- Extract Button -->
                 <Button
                     android:id="@+id/btnExtract"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
                     android:text="Extract"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="15dp" />
+                    app:layout_constraintStart_toStartOf="@+id/guideline" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
