--- a/App/app/src/main/res/layout/popup_key_list.xml
+++ b/App/app/src/main/res/layout/popup_key_list.xml
@@ -16,12 +16,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvKeyListHeader"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/key_list_popup_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@id/tvKeyListHeader"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
