--- a/App/app/src/main/res/layout/key_row.xml
+++ b/App/app/src/main/res/layout/key_row.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -34,8 +40,7 @@
                 app:layout_constraintEnd_toStartOf="@id/isRegistered"
                 app:layout_constraintHorizontal_bias="0.00"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingEnd="125dp"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <!-- Is Registered -->
             <TextView
@@ -46,8 +51,7 @@
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/expandedLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Expanded Layout -->
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -121,4 +125,4 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
