--- a/App/app/src/main/res/layout/key_row.xml
+++ b/App/app/src/main/res/layout/key_row.xml
@@ -35,7 +35,8 @@
                 app:layout_constraintEnd_toStartOf="@id/isRegistered"
                 app:layout_constraintHorizontal_bias="0.00"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingEnd="15dp"/>
 
             <!-- Is Registered -->
             <TextView
@@ -46,7 +47,8 @@
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/expandedLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingStart="10dp"/>
 
             <!-- Expanded Layout -->
             <androidx.constraintlayout.widget.ConstraintLayout
